add UpdateEmployee.java functionality, which actually updates record

--- a/webapps/styleone/WEB-INF/web.xml
+++ b/webapps/styleone/WEB-INF/web.xml
@@ -117,6 +117,15 @@
 <servlet-name>EditEmployee</servlet-name>
 <url-pattern>/editEmployee</url-pattern>
 </servlet-mapping>
+
+<servlet>
+<servlet-name>UpdateEmployee</servlet-name>
+<servlet-class>com.thinking.machines.hr.servlets.UpdateEmployee</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>UpdateEmployee</servlet-name>
+<url-pattern>/updateEmployee</url-pattern>
+</servlet-mapping>
 </web-app>
 
 
