styletwo add flow formId check

--- a/webapps/styletwo/WEB-INF/web.xml
+++ b/webapps/styletwo/WEB-INF/web.xml
@@ -27,6 +27,10 @@
     </description>
     <display-name>Style Two</display-name>
 
+<welcome-file-list>
+	<welcome-file>index.jsp</welcome-file>
+</welcome-file-list>
+
     <request-character-encoding>UTF-8</request-character-encoding>
 <servlet>
 <servlet-name>AddDesignation</servlet-name>
@@ -72,6 +76,15 @@
 <servlet-mapping>
 <servlet-name>DeleteDesignation</servlet-name>
 <url-pattern>/deleteDesignation</url-pattern>
+</servlet-mapping>
+
+<servlet>
+<servlet-name>NotifyFormResubmission</servlet-name>
+<servlet-class>com.thinking.machines.hr.servlets.NotifyFormResubmission</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>NotifyFormResubmission</servlet-name>
+<url-pattern>/notifyFormResubmission</url-pattern>
 </servlet-mapping>
 
 </web-app>
