before solving issue of 'EntityList tag running multiple times for same entity' & loading JS data structure with data from database

--- a/webapps/styletwo/WEB-INF/web.xml
+++ b/webapps/styletwo/WEB-INF/web.xml
@@ -106,6 +106,15 @@
 <url-pattern>/logout</url-pattern>
 </servlet-mapping>
 
+<servlet>
+<servlet-name>EmployeesJS</servlet-name>
+<servlet-class>com.thinking.machines.hr.servlets.EmployeesJS</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>EmployeesJS</servlet-name>
+<url-pattern>/js/Employees.js</url-pattern>
+</servlet-mapping>
+
 </web-app>
 
 
