add, edit, delete employee functionality in styletwo

--- a/webapps/styletwo/WEB-INF/web.xml
+++ b/webapps/styletwo/WEB-INF/web.xml
@@ -106,6 +106,8 @@
 <url-pattern>/logout</url-pattern>
 </servlet-mapping>
 
+<!-- servlet mapping for Employees below this -->
+
 <servlet>
 <servlet-name>EmployeesJS</servlet-name>
 <servlet-class>com.thinking.machines.hr.servlets.EmployeesJS</servlet-class>
@@ -115,12 +117,55 @@
 <url-pattern>/js/Employees.js</url-pattern>
 </servlet-mapping>
 
+<servlet>
+<servlet-name>AddEmployee</servlet-name>
+<servlet-class>com.thinking.machines.hr.servlets.AddEmployee</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>AddEmployee</servlet-name>
+<url-pattern>/addEmployee</url-pattern>
+</servlet-mapping>
+
+<servlet>
+<servlet-name>EditEmployee</servlet-name>
+<servlet-class>com.thinking.machines.hr.servlets.EditEmployee</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>EditEmployee</servlet-name>
+<url-pattern>/editEmployee</url-pattern>
+</servlet-mapping>
+
+<servlet>
+<servlet-name>UpdateEmployee</servlet-name>
+<servlet-class>com.thinking.machines.hr.servlets.UpdateEmployee</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>UpdateEmployee</servlet-name>
+<url-pattern>/updateEmployee</url-pattern>
+</servlet-mapping>
+
+<servlet>
+<servlet-name>ConfirmDeleteEmployee</servlet-name>
+<servlet-class>com.thinking.machines.hr.servlets.ConfirmDeleteEmployee</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>ConfirmDeleteEmployee</servlet-name>
+<url-pattern>/confirmDeleteEmployee</url-pattern>
+</servlet-mapping>
+
+
+<servlet>
+<servlet-name>DeleteEmployee</servlet-name>
+<servlet-class>com.thinking.machines.hr.servlets.DeleteEmployee</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>DeleteEmployee</servlet-name>
+<url-pattern>/deleteEmployee</url-pattern>
+</servlet-mapping>
+
+
+
 </web-app>
-
-
-
-
-
 
 
 
